--- a/Builds/Web/index.html
+++ b/Builds/Web/index.html
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">UI_Toolkit_Label_Autosize</div>
+        <div id="unity-build-title">UI Toolkit Label Autosize</div>
       </div>
     </div>
     <script>
