--- a/Builds/Web/index.html
+++ b/Builds/Web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | UI_Toolkit_Label_Autosize</title>
+    <title>Unity Web Player | UI Toolkit Label Autosize</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
